[package]
name = "returntypefuture"
version = "0.1.0"
authors = ["Jasper Visser <jasper.visser@keylane.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws = "0.9.1"
futures = "0.3.*"
tokio = { version =  "0.2.21", features = ["full"] }
tokio-tungstenite = "0.10.1"
tungstenite = "0.10.1"
futures-channel = "0.3.5"